--- a/.classpath
+++ b/.classpath
@@ -4,5 +4,10 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="lib" path="lib/miglayout-3.7-swing.jar"/>
 	<classpathentry kind="lib" path="lib/zonelayout-1.0.jar"/>
+	<classpathentry kind="lib" path="lib/gluegen-rt.jar"/>
+	<classpathentry kind="lib" path="lib/jogl.jar"/>
+	<classpathentry kind="lib" path="lib/opencsv-2.1.jar"/>
+	<classpathentry kind="lib" path="lib/org.convexhull.jar"/>
+	<classpathentry kind="lib" path="lib/org.jzy3d-0.8.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
